Updated View Forcasting Table

--- a/SalesForcasting/Views/Home/Landing.cshtml
+++ b/SalesForcasting/Views/Home/Landing.cshtml
@@ -89,7 +89,7 @@
         <div class="container">
             <h1 class="fw-bold">Sales Forecasting System</h1>
             <p class="lead">Empowering your business with smart, predictive insights</p>
-            <a href="/Forecast/Index" class="btn btn-outline-light btn-lg">View Forecast</a>
+            <a asp-controller="Sales" asp-action="GetAllForecasts" class="btn btn-outline-light btn-lg">View Forecast</a>
         </div>
     </section>
 
